# PaintShare

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: CREATE-user_accounts_table.sql  postcommentstable.sql  postlikestable.sql  poststable.sql  tokentable.sql  useraccounts.sql
src/: main.rs  middleware.rs
src/database/: mod.rs  register.rs  service.rs
src/database/installation/: create_post_comments_table.rs  create_post_like.rs  create_post_table.rs  create_token_table.rs  create_user_table.rs  mod.rs
src/database/models/: mod.rs  post_comments.rs  post_likes.rs  posts.rs  refresh_token.rs  user.rs
src/endpoints/: default_endpoint.rs  error_model.rs  mod.rs  register_endpoint.rs
src/endpoints/auth/: get_accesstoken_endpoint.rs  login_endpoint.rs  me_endpoint.rs  mod.rs
src/endpoints/models/: mod.rs  post_model.rs  user_model.rs
src/endpoints/post/: comment_post.rs  get_post_data.rs  get_post_image.rs  like_post.rs  mod.rs
src/endpoints/user/: follow_state_endpoint.rs  follow_user_endpoint.rs  get_user_information_endpoint.rs  get_user_posts_endpoint.rs  mod.rs  profile_picture_endpoint.rs  search_user_endpoint.rs  unfollow_user_endpoint.rs  upload_new_image_endpoint.rs
src/jwt/: exif.rs  mod.rs  sign.rs  verify.rs
src/utils/: enviroment_handler.rs  file.rs  hashing.rs  iterator.rs  mod.rs  random.rs  request_utils.rs  storage.rs  user_handler.rs
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx
web/src/components/: designWrapper.tsx  post.tsx  postGroup.tsx  postView.tsx  (+2 more)
(+32 files in other folders)
