[package]
name = "PaintShare"
version = "0.1.0"
authors = ["Mathis Burger <kontakt@mathis-burger.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-files = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["chrono", "macros", "migrate", "offline", "mysql", "runtime-actix-rustls", "uuid", "sqlite"] }
rand = "0.8.3"
dotenv = "0.15.0"
sodiumoxide = "0.2.6"
rsa = "0.3.0"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4"
time = "0.2.6"
jwt = "0.13.0"
hmac = "0.10.1"
sha2 = "0.9.3"